Add CLI parameter for termination condition